[package]
name = "epiq"
version = "0.1.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "Laboratory for pipeline construction with feedback"
repository = "https://github.com/ynqa/empiriqa"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
chrono = "0.4.40"
# See https://github.com/crossterm-rs/crossterm/issues/935
crossterm = { version = "0.28.1", features = ["use-dev-tty", "event-stream", "libc"] }
futures = "0.3.31"
promkit = "0.8.0"
shlex = "1.3.0"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.44.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
